fixed a typo in the tomcat installation section